CREATE TABLE CATEGORIA (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(500) NOT NULL,
    descripcion VARCHAR(500),
    tipo_categoria INTEGER NOT NULL,
    category_icon VARCHAR(500) NOT NULL,
    color_format VARCHAR(500) NOT NULL,
    ui_order INTEGER NOT NULL,
    creado_en TIMESTAMP WITH TIME ZONE NOT NULL,
    modificado_en TIMESTAMP WITH TIME ZONE DEFAULT NULL,
    creado_por INTEGER,
    modificado_por INTEGER DEFAULT NULL
);