RECREATE TABLE DETALLE_PRESUPUESTO (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    presupuesto_id INTEGER NOT NULL,  --FK
    subcategoria_id INTEGER NOT NULL, -- FK
    observaciones VARCHAR(500),
    monto_mensual NUMERIC(15,2),
    modificado_en TIMESTAMP WITH TIME ZONE DEFAULT NULL,
    creado_en TIMESTAMP WITH TIME ZONE NOT NULL,
    creado_por INTEGER,
    CONSTRAINT DETALLE_PRESUPUESTO_PRESUPUESTO_FK FOREIGN KEY 
    (presupuesto_id) REFERENCES PRESUPUESTO(id_presupuesto) 
    ON DELETE CASCADE ON UPDATE CASCADE;
);