RECREATE TABLE PRESUPUESTO (
    id_presupuesto INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_usuario INTEGER NOT NULL, --FK USUARIO
    nombre_presupuesto VARCHAR(255) NOT NULL,
    anio_inicio INTEGER NOT NULL,
    mes_inicio INTEGER NOT NULL,
    anio_fin INTEGER NOT NULL,
    mes_fin INTEGER NOT NULL,
    total_ingresos_planificados NUMERIC(15,2) DEFAULT 0 NOT NULL,
    total_gastos_planificados NUMERIC(15,2) DEFAULT 0 NOT NULL,
    total_ahorro_planificado NUMERIC(15,2) DEFAULT 0 NOT NULL,
    fecha_creacion TIMESTAMP WITH TIME ZONE NOT NULL,
    estado VARCHAR(20) DEFAULT 'borrador' NOT NULL,
    creado_en TIMESTAMP WITH TIME ZONE NOT NULL,
    modificado_en TIMESTAMP WITH TIME ZONE DEFAULT NULL,
    creado_por INTEGER,
    modificado_por INTEGER DEFAULT NULL,
    CHECK(mes_inicio >= 1 AND mes_inicio <= 12),
    CHECK(mes_fin >= 1 AND mes_fin <= 12)
);