RECREATE TABLE SUBCATEGORIA (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    categoria_id INTEGER NOT NULL, -- FK
    nombre VARCHAR(500) NOT NULL,
    descripcion VARCHAR(500),
    is_default BOOLEAN NOT NULL,
    creado_en TIMESTAMP WITH TIME ZONE NOT NULL,
    modificado_en TIMESTAMP WITH TIME ZONE DEFAULT NULL,
    creado_por INTEGER,
    modificado_por INTEGER DEFAULT NULL
);
