RECREATE TABLE TRANSACCIONES (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_usuario INTEGER NOT NULL,      --FK
    presupuesto_id INTEGER NOT NULL,  --FK
    anio INTEGER NOT NULL,
    mes INTEGER NOT NULL,
    subcategoria_id INTEGER NOT NULL, -- FK
    obligacion_id INTEGER,            -- FK
    descripcion VARCHAR(500),
    monto NUMERIC(15,2),
    fecha DATE,
    no_factura VARCHAR(500),
    creado_en TIMESTAMP WITH TIME ZONE NOT NULL,
    modificado_en TIMESTAMP WITH TIME ZONE DEFAULT NULL,
    creado_por INTEGER,
    modificado_por INTEGER DEFAULT NULL
);