RECREATE TABLE USUARIO (
    id_usuario INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(255) NOT NULL,
    apellido VARCHAR(255) NOT NULL,
    correo_electronico VARCHAR(255) NOT NULL,
    creado_en TIMESTAMP WITH TIME ZONE NOT NULL,
    modificado_en TIMESTAMP WITH TIME ZONE DEFAULT NULL,
    salario_mensual_base NUMERIC(15,2) DEFAULT 0 NOT NULL,
    estado VARCHAR(20) DEFAULT 'activo' NOT NULL,
    CHECK (estado IN ('activo', 'inactivo')),
    CHECK (salario_mensual_base >= 0)
);
