Table "USUARIO" {
  "id_usuario" int [pk, not null, increment]
  "nombre" text [not null]
  "apellido" text [not null]
  "correo_electronico" text [unique, not null]
  "fecha_registro" timestamp [not null, default: `GETDATE()`]
  "salario_mensual_base" numeric [not null, default: 0]
  "estado" text [not null, default: `activo`]
  "creado_en" timestamp [not null, default: `GETDATE()`]
  "modificado_en" timestamp [not null, default: `GETDATE()`]
  "creado_por" int
  "modificado_por" int
}

Table "CATEGORIA" {
  "id" int [pk, not null, increment]
  "name" varchar(500) [not null]
  "description" varchar(500)
  "category_type" int [not null]
  "category_icon" varchar(500) [not null]
  "color_format" varchar(500) [not null]
  "ui_order" int [not null]
  "creado_en" timestamp [not null, default: `GETDATE()`]
  "modificado_en" timestamp [not null, default: `GETDATE()`]
  "creado_por" int
  "modificado_por" int
}

Table "SUBCATEGORIA" {
  "id" int [pk, not null, increment]
  "categoria_id" int [not null, ref: < "CATEGORIA"."id"]
  "nombre" varchar(500) [not null]
  "descripcion" varchar(500)
  "is_default" boolean [not null]
  "creado_en" timestamp [not null, default: `GETDATE()`]
  "modificado_en" timestamp [not null, default: `GETDATE()`]
  "creado_por" int
  "modificado_por" int
}

Table "PRESUPUESTO" {
  "id_presupuesto" int [pk, not null, increment]
  "id_usuario" int [not null, ref: < "USUARIO"."id_usuario"]
  "nombre_presupuesto" text [not null]
  "anio_inicio" int [not null]
  "mes_inicio" int [not null]
  "anio_fin" int [not null]
  "mes_fin" int [not null]
  "total_ingresos_planificados" numeric [not null, default: 0]
  "total_gastos_planificados" numeric [not null, default: 0]
  "total_ahorro_planificado" numeric [not null, default: 0]
  "fecha_creacion" timestamp [not null, default: `GETDATE()`]
  "estado" text [not null, default: `borrador`]
  "creado_en" timestamp [not null, default: `GETDATE()`]
  "modificado_en" timestamp [not null, default: `GETDATE()`]
  "creado_por" int
  "modificado_por" int
}

Table "DETALLE_PRESUPUESTO" {
  "id" int [pk, not null, increment]
  "presupuesto_id" int [not null, ref: < "PRESUPUESTO"."id_presupuesto"]
  "subcategoria_id" int [not null, ref: < "SUBCATEGORIA"."id"]
  "monto_mensual" double
  "observaciones" varchar(500)
  "creado_en" timestamp [not null, default: `GETDATE()`]
  "modificado_en" timestamp [not null, default: `GETDATE()`]
}

Table "OBLIGACION_FIJA" {
  "id" int [pk, not null, increment]
  "id_usuario" int [not null, ref: < "USUARIO"."id_usuario"]
  "subcategoria_id" int [not null, ref: < "SUBCATEGORIA"."id"]
  "nombre" varchar(500) [not null]
  "descripcion" varchar(500)
  "dia_mes_expiracion" int [not null]
  "is_vigente" boolean [not null]
  "fecha_inicio" date [not null]
  "fecha_final" date
  "creado_en" timestamp [not null, default: `GETDATE()`]
  "modificado_en" timestamp [not null, default: `GETDATE()`]
  "creado_por" int
  "modificado_por" int
}

Table "TRANSACCIONES" {
  "id" int [pk, not null, increment]
  "id_usuario" int [not null, ref: < "USUARIO"."id_usuario"]
  "presupuesto_id" int [not null, ref: < "PRESUPUESTO"."id_presupuesto"]
  "anio" int [not null]
  "mes" int [not null]
  "subcategoria_id" int [not null, ref: < "SUBCATEGORIA"."id"]
  "obligacion_id" int [ref: < "OBLIGACION_FIJA"."id"]
  "descripcion" varchar(500)
  "monto" double
  "fecha" date
  "no_factura" varchar(500)
  "creado_en" timestamp [not null, default: `GETDATE()`]
  "modificado_en" timestamp [not null, default: `GETDATE()`]
  "creado_por" int
  "modificado_por" int
}
